--- a/back-end/src/main/resources/application.properties
+++ b/back-end/src/main/resources/application.properties
@@ -17,6 +17,7 @@
 ##endpoint
 #spring.data.rest.base-path=/api/rest
 
-spring.datasource.url = jdbc:mysql://localhost/realEstate
+
+spring.datasource.url = jdbc:mysql://localhost/real_estate
 spring.datasource.username = root
 spring.datasource.password = Zarpa1816#*#
