--- a/back-end/pom.xml
+++ b/back-end/pom.xml
@@ -88,6 +88,10 @@
             <artifactId>flyway-mysql</artifactId>
             <scope>compile</scope>
         </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-validation</artifactId>
+        </dependency>
 
 
     </dependencies>
