--- a/back-end/src/main/resources/application.properties
+++ b/back-end/src/main/resources/application.properties
@@ -18,6 +18,8 @@
 #spring.data.rest.base-path=/api/rest
 
 
-spring.datasource.url = jdbc:mysql://localhost/real_estate
-spring.datasource.username = root
-spring.datasource.password = Zarpa1816#*#
+spring.datasource.url=jdbc:mysql://localhost:3306/nocountry
+spring.datasource.username=root
+spring.datasource.password=
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true
