--- a/front-end/package.json
+++ b/front-end/package.json
@@ -9,8 +9,10 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@popperjs/core": "^2.11.8",
     "axios": "^1.5.1",
     "bootstrap": "^5.3.2",
+    "bootstrap-icons": "^1.11.1",
     "next": "13.5.4",
     "react": "^18",
     "react-dom": "^18"
