Mapeo de entidades y configuracion de AWS S3

--- a/back-end/src/main/resources/application.properties
+++ b/back-end/src/main/resources/application.properties
@@ -8,18 +8,23 @@
 #spring.datasource.username=root
 #spring.datasource.password=
 #
-#spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
-#spring.jpa.hibernate.ddl-auto=update
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
+spring.jpa.hibernate.ddl-auto=update
 ##Para inicializar DB
 #spring.jpa.defer-datasource-initialization=true
 ##crear tablas de forma automatica al iniciar la app
-#spring.sql.init.mode=always
+spring.sql.init.mode=always
 ##endpoint
 #spring.data.rest.base-path=/api/rest
 
-
 spring.datasource.url=jdbc:mysql://localhost:3306/nocountry
 spring.datasource.username=root
-spring.datasource.password=
+spring.datasource.password=1234
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
+
+#Aws credentials
+aws.accessKey=${ACCESS_KEY}
+aws.secretKey=${SECRET_KEY}
+aws.bucketName=${BUCKET_NAME}
+aws.bucketRegion=${REGION}
