--- a/back-end/src/main/resources/application.properties
+++ b/back-end/src/main/resources/application.properties
@@ -28,3 +28,6 @@ aws.accessKey=${ACCESS_KEY}
 aws.secretKey=${SECRET_KEY}
 aws.bucketName=${BUCKET_NAME}
 aws.bucketRegion=${REGION}
+
+spring.servlet.multipart.max-file-size=10MB
+spring.servlet.multipart.max-request-size=10MB
