--- a/back-end/src/main/resources/application.properties
+++ b/back-end/src/main/resources/application.properties
@@ -19,7 +19,7 @@ spring.sql.init.mode=always
 
 spring.datasource.url=jdbc:mysql://localhost:3306/nocountry
 spring.datasource.username=root
-spring.datasource.password=1234
+spring.datasource.password=
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
 
