--- a/front-end/package.json
+++ b/front-end/package.json
@@ -16,6 +16,7 @@
     "downshift": "^8.2.2",
     "next": "13.5.4",
     "react": "^18",
+    "react-bootstrap": "^2.9.1",
     "react-dom": "^18",
     "react-select": "^5.7.7"
   },
