--- a/back-end/src/main/resources/application.properties
+++ b/back-end/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 ##Port
-#server.port = 9090
-#server.error.include-exception=true
-#server.error.include-stacktrace=always
+server.port = 9090
+server.error.include-exception=true
+server.error.include-stacktrace=always
 ##Data Base
 #spring.datasource.url = jdbc:mysql://localhost:3306/railway?useSSL=false&serverTimezone=UTC&useLegacyDatetimeCode=false
 #spring.sql.init.encoding = UTF-8
@@ -9,7 +9,7 @@
 #spring.datasource.password=
 #
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=create
 ##Para inicializar DB
 #spring.jpa.defer-datasource-initialization=true
 ##crear tablas de forma automatica al iniciar la app
@@ -36,3 +36,11 @@ spring.servlet.multipart.max-request-size=10MB
 springdoc.api-docs.enabled=true
 springdoc.swagger-ui.enabled=true
 springdoc.swagger-ui.path=/swagger-ui.html
+
+#Envio de correos
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+spring.mail.username=inmobiliariainmobiliaria132@gmail.com
+spring.mail.password=fradbceguudkathh
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
