:sparkles: Adding BD in Railway

--- a/back-end/src/main/resources/application.properties
+++ b/back-end/src/main/resources/application.properties
@@ -9,7 +9,7 @@ server.error.include-stacktrace=always
 #spring.datasource.password=
 #
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
-spring.jpa.hibernate.ddl-auto=create
+spring.jpa.hibernate.ddl-auto=none
 ##Para inicializar DB
 #spring.jpa.defer-datasource-initialization=true
 ##crear tablas de forma automatica al iniciar la app
@@ -17,9 +17,9 @@ spring.sql.init.mode=always
 ##endpoint
 #spring.data.rest.base-path=/api/rest
 
-spring.datasource.url=jdbc:mysql://localhost:3306/nocountry
+spring.datasource.url=jdbc:mysql://containers-us-west-48.railway.app:6995/railway
 spring.datasource.username=root
-spring.datasource.password=
+spring.datasource.password=jKIv38lTI0tOPzwHe0qu
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
 
