--- a/back-end/src/main/resources/application.properties
+++ b/back-end/src/main/resources/application.properties
@@ -9,7 +9,7 @@ server.error.include-stacktrace=always
 #spring.datasource.password=
 #
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
-spring.jpa.hibernate.ddl-auto=none
+spring.jpa.hibernate.ddl-auto=update
 ##Para inicializar DB
 #spring.jpa.defer-datasource-initialization=true
 ##crear tablas de forma automatica al iniciar la app
