--- a/front-end/package.json
+++ b/front-end/package.json
@@ -18,7 +18,8 @@
     "react": "^18",
     "react-bootstrap": "^2.9.1",
     "react-dom": "^18",
-    "react-select": "^5.7.7"
+    "react-select": "^5.7.7",
+    "react-toastify": "^9.1.3"
   },
   "devDependencies": {
     "eslint": "^8",
