--- a/back-end/src/main/resources/application.properties
+++ b/back-end/src/main/resources/application.properties
@@ -17,9 +17,10 @@ spring.sql.init.mode=always
 ##endpoint
 #spring.data.rest.base-path=/api/rest
 
-spring.datasource.url=jdbc:mysql://containers-us-west-48.railway.app:6995/railway
+#spring.datasource.url=jdbc:mysql://containers-us-west-48.railway.app:6995/railway
+spring.datasource.url=jdbc:mysql://root:1AccCbggHaBfAAa6DA2G1A-gfc51dfb5@monorail.proxy.rlwy.net:20241/railway
 spring.datasource.username=root
-spring.datasource.password=jKIv38lTI0tOPzwHe0qu
+spring.datasource.password=1AccCbggHaBfAAa6DA2G1A-gfc51dfb5
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
 
